--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,8 @@
     "@lit-labs/ssr/": "npm:/@lit-labs/ssr/",
     "@open-wc/scoped-elements": "https://esm.sh/@open-wc/scoped-elements@3.0.5/html-element.js",
     "@open-wc/scoped-elements/": "https://esm.sh/@open-wc/scoped-elements@3.0.5/",
-    "lit": "npm:lit@^3.1.2"
+    "lit": "npm:lit@^3.1.2",
+    "/lit": "npm:/lit@^3.1.2/"
   },
   "fmt": {
     "singleQuote": true
