--- a/example/deno.json
+++ b/example/deno.json
@@ -2,7 +2,8 @@
   "name": "@limettejs/limette",
   "version": "0.0.1",
   "tasks": {
-    "start": "deno run -A --watch=static/,routes/ dev.ts",
+    "start": "deno run -A --watch=static/,routes/ start.ts",
+    "build": "deno run -A dev.ts build",
     "preview": "deno run -A --watch main.ts"
   },
   "imports": {
