--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,13 @@
 {
   "name": "@limette/core",
   "version": "0.0.1",
-  "exports": {
-    ".": "./src/mod.ts"
-  },
+  "exports": "./src/mod.ts",
   "tasks": {},
   "publish": {
     "include": ["src/**", "deno.json", "README.md", "LICENSE"]
   },
   "imports": {
-    "$limette/": "./limette/",
+    "limette/": "./src/mod.ts",
     "/lit": "npm:/lit@^3.1.3/",
     "lit": "npm:lit@^3.1.3"
   },
