--- a/init/deno.json
+++ b/init/deno.json
@@ -9,9 +9,7 @@
     "include": ["src/**/*.ts", "deno.json", "README.md"]
   },
   "imports": {
-    "$limette/": "./limette/",
-    "/lit": "npm:/lit@^3.1.2/",
-    "lit": "npm:lit@^3.1.3"
+    "@std/fs": "jsr:@std/fs@^1.0.0"
   },
   "fmt": {
     "singleQuote": true
