--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,7 @@
     "include": ["src/**", "deno.json", "README.md", "LICENSE"]
   },
   "imports": {
-    "limette/": "./src/mod.ts",
+    "limette": "./src/mod.ts",
     "/lit": "npm:/lit@^3.1.3/",
     "lit": "npm:lit@^3.1.3"
   },
