--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,19 @@
 {
   "name": "@limette/core",
   "version": "0.0.1",
-  "exports": "./src/mod.ts",
+  "exports": {
+    ".": "./src/mod.ts",
+    "./runtime/": "./src/runtime/"
+  },
   "tasks": {},
   "publish": {
     "include": ["src/**", "deno.json", "README.md", "LICENSE"]
   },
   "imports": {
-    "limette": "./src/mod.ts",
     "/lit": "npm:/lit@^3.1.3/",
-    "lit": "npm:lit@^3.1.3"
+    "limette": "./src/mod.ts",
+    "lit": "npm:lit@^3.1.3",
+    "tailwindcss": "npm:tailwindcss@^3.4.7"
   },
   "fmt": {
     "singleQuote": true
