--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@limette/core",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "exports": {
     ".": "./src/mod.ts",
     "./runtime/is-land.ts": "./src/runtime/is-land.ts",
@@ -12,6 +12,7 @@
   },
   "imports": {
     "/lit": "npm:/lit@^3.1.3/",
+    "@std/path": "jsr:@std/path@^1.0.2",
     "limette": "./src/mod.ts",
     "lit": "npm:lit@^3.1.3",
     "tailwindcss": "npm:tailwindcss@^3.4.7"
