--- a/deno.json
+++ b/deno.json
@@ -12,8 +12,9 @@
   },
   "imports": {
     "/lit": "npm:/lit@^3.1.3/",
-    "@std/path": "jsr:@std/path@^1.0.2",
     "@limette/core": "./src/mod.ts",
+    "@std/path": "jsr:@std/path@^1.0.2",
+    "@std/semver": "jsr:@std/semver@^1.0.1",
     "lit": "npm:lit@^3.1.3",
     "tailwindcss": "npm:tailwindcss@^3.4.7"
   },
