--- a/examples/deno.json
+++ b/examples/deno.json
@@ -1,15 +1,16 @@
 {
-  "name": "@limettejs/limette",
-  "version": "0.0.1",
   "tasks": {
-    "start": "deno run -A --watch=static/,routes/ start.ts",
+    "dev": "deno run -A --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
-    "preview": "deno run -A --watch main.ts"
+    "start": "deno run -A --watch main.ts"
   },
   "imports": {
-    "@limette/core": "../src/",
+    "@limette/core": "jsr:@limette/core@0.0.7",
     "/lit": "npm:/lit@^3.1.2/",
-    "lit": "npm:lit@^3.1.2"
+    "lit": "npm:lit@^3.1.2",
+    "tailwindcss": "npm:tailwindcss@^3.4.7",
+    "@std/path": "jsr:@std/path@^1.0.2",
+    "@std/semver": "jsr:@std/semver@^1.0.1"
   },
   "fmt": {
     "singleQuote": true
