feat: make islands CSR by default with ssr opt-in (#14)
* docs: cleanup

* docs: update

* feat: add support for skip-hydration and ssr

* feat: final support for islands

* fix: typescript

--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
 {
   "name": "@limette/core",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "exports": {
     ".": "./src/mod.ts",
     "./runtime/is-land.ts": "./src/runtime/is-land.ts",
+    "./runtime/ssr-client/lit-element-hydrate-support": "./src/runtime/ssr-client/lit-element-hydrate-support.ts",
     "./runtime/refresh.ts": "./src/runtime/refresh.ts"
   },
   "tasks": {
