feat: add spinner

--- a/init/deno.json
+++ b/init/deno.json
@@ -9,7 +9,7 @@
     "include": ["src/**/*.ts", "deno.json", "README.md"]
   },
   "imports": {
-    "@std/fmt": "jsr:@std/fmt@^1.0.4",
+    "@std/fmt": "jsr:@std/fmt@1.0.4",
     "@std/path": "jsr:@std/path@1.0.8",
     "@std/fs": "jsr:@std/fs@1.0.10"
   },
