--- a/deno.json
+++ b/deno.json
@@ -21,6 +21,7 @@
     "@lit-labs/ssr": "npm:@lit-labs/ssr@3.3.0",
     "@lit-labs/ssr/": "npm:/@lit-labs/ssr@3.3.0/",
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@0.11.1",
+    "@std/cli": "jsr:@std/cli@1.0.11",
     "@std/encoding": "jsr:@std/encoding@1.0.6",
     "@std/fmt": "jsr:@std/fmt@1.0.4",
     "@std/fs": "jsr:@std/fs@1.0.10",
