--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@limette/core",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "exports": {
     ".": "./src/mod.ts",
     "./runtime": "./src/runtime/mod.ts",
@@ -21,9 +21,10 @@
     "@lit-labs/ssr": "npm:@lit-labs/ssr@3.3.0",
     "@lit-labs/ssr/": "npm:/@lit-labs/ssr@3.3.0/",
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@0.11.1",
+    "@std/cli": "jsr:@std/cli@1.0.11",
     "@std/encoding": "jsr:@std/encoding@1.0.6",
     "@std/fmt": "jsr:@std/fmt@1.0.4",
-    "@std/fs": "jsr:@std/fs@1.0.9",
+    "@std/fs": "jsr:@std/fs@1.0.10",
     "@std/http": "jsr:@std/http@1.0.12",
     "@std/path": "jsr:@std/path@1.0.8",
     "@std/semver": "jsr:@std/semver@1.0.3",
