--- a/init/deno.json
+++ b/init/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@limette/init",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "exports": {
     ".": "./src/mod.ts"
   },
@@ -9,7 +9,9 @@
     "include": ["src/**/*.ts", "deno.json", "README.md"]
   },
   "imports": {
-    "@std/fs": "jsr:@std/fs@^1.0.2"
+    "@std/fmt": "jsr:@std/fmt@1.0.4",
+    "@std/path": "jsr:@std/path@1.0.8",
+    "@std/fs": "jsr:@std/fs@1.0.10"
   },
   "fmt": {
     "singleQuote": true
